SLING-11147 Configure Maven Failsafe Plugin to run build successfully on Java 17 (JPMS)
- build with JDK 11 and 17 (JDK 8 does not support JPMS)
- open java.base/java.lang to Commons Threads